Docs: Add future roadmap and expense history feature